# opencypher-benchmarking

./: .gitignore  CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml  run_bench.sh  run_tests.sh  sample_config.yaml
src/graph_db_comparison/: __main__.py  compatibility.py  config.py  connections.py  models.py
src/graph_db_comparison/benchmarks/: __init__.py  advanced.py  basic.py  intermediate.py  runner.py
src/graph_db_comparison/report/: generator.py  template.html
src/opencypher_benchmarking/: __main__.py  compatibility.py  config.py  connections.py  data_generation.py
src/opencypher_benchmarking/benchmarks/: __init__.py  advanced.py  basic.py  intermediate.py  runner.py
src/opencypher_benchmarking/report/: generator.py  template.html
tests/: test_benchmarks.py  test_cli.py  test_compatibility.py  test_config.py  test_connections.py  test_data_generation.py  test_report.py
